@@ -1,3 +1,8 @@
+2008-01-21  Alexander Larsson  <alexl@redhat.com>
+
+        * daemon/mount.c:
+	Reload the list of mountables on SIGUSR1
+
 2008-01-21  Christian Kellner  <gicmo@gnome.org>
 
 
